--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+    profiles:
+        active: ${PROFILE}
+        default: prod
     application:
         name: TramManagementSystem
     datasource:
@@ -10,3 +13,12 @@ spring:
             ddl-auto: update
         show-sql: false
         open-in-view: true
+    mail:
+        host: smtp.gmail.com
+        port: 587
+        username: nazimfb@code.edu.az
+        password: ${MAIL_PASSKEY}
+        properties:
+            mail.smtp:
+                auth: true
+                starttls.enable: true
